# handmade-cg

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
lib/algebrick/: Makefile  algebrick.h  point3d.cpp  point3d.h  vec3d.cpp  vec3d.h
lib/algebrick/include/: algebrick.hpp  matrix.hpp  point3d.hpp  ray.hpp  vec3d.hpp
lib/algebrick/src/: matrix.cpp  point3d.cpp  ray.cpp  vec3d.cpp
lib/graphite/: Makefile  canvas.cpp  canvas.h  cilinder.cpp  object.h  ray.h  space.cpp  space.h
lib/graphite/include/: canvas.hpp  cilinder.hpp  circular_plane.hpp  cone.hpp  directed_light.hpp  intensity.hpp  light.hpp  light_point.hpp  mesh.hpp  object.hpp  plane.hpp  scene.hpp  space.hpp  sphere.hpp  spotlight.hpp  texture.hpp  tri_mesh.hpp  triangular_plane.hpp
lib/graphite/src/: canvas.cpp  cilinder.cpp  circular_plane.cpp  cone.cpp  directed_light.cpp  intensity.cpp  light.cpp  light_point.cpp  mesh.cpp  object.cpp  plane.cpp  scene.cpp  space.cpp  sphere.cpp  spotlight.cpp  texture.cpp  tri_mesh.cpp  triangular_plane.cpp
lib/utils/include/: mesh_loader.hpp
lib/utils/src/: mesh_loader.cpp
models/table/: table.mtl
programs/algebrick_test/: Makefile
programs/algebrick_test/src/: main.cpp
programs/ball_plane/src/: main.cpp
programs/final_scene/src/: lights.cpp  main.cpp  objects.cpp  room.cpp
programs/graphite_test/: Makefile
programs/graphite_test/src/: main.cpp
programs/load_mesh/src/: main.cpp
programs/room/src/: main.cpp
programs/shadow_test/: Makefile
programs/sphere_test/: Makefile
src/test/: Makefile  main.cpp
(+28 files in other folders)
